[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "telegraf-client"
description = "Python bindings for the telegraf Rust client"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
dynamic = ["version"]
dependencies = [
    "maturin>=1.9.6",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/KidziaK/telegraf_client"
Repository = "https://github.com/KidziaK/telegraf_client"

[tool.maturin]
module-name = "telegraf_client"
