[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "telegraf-client"
version = "0.1.6"
description = "Python bindings for the telegraf Rust client"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "telegraf-client contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
keywords = ["telegraf", "metrics", "monitoring", "rust", "python"]
dependencies = [
    "maturin>=1.9.6",
    "requests>=2.32.4",
    "twine>=6.2.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/KidziaK/telegraf_client"
Repository = "https://github.com/KidziaK/telegraf_client"

[tool.maturin]
module-name = "telegraf_client"
